AC_INIT([avl], [0.1], [avl-plt@googlegroups.com], [],
	[https://github.com/wqfish/avl])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AC_PROG_CXX([g++])
AC_PROG_LEX
AC_PROG_YACC

AC_PROG_RANLIB
AM_PROG_AR
# AC_PROG_LIBTOOL
# AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
		 Makefile
		 src/Makefile
		 lib/Makefile
		 ])

AC_OUTPUT
