AM_TESTS_ENVIRONMENT = . $(srcdir)/init_test.sh;
AM_TESTS_FD_REDIRECT = 9>&2

TESTS = \
			cast.sh \
			constant.sh \
			declaration_bool.sh \
			declaration_bool_array.sh \
			declaration_char.sh \
			declaration_char_array.sh \
			declaration_index.sh \
			declaration_int.sh \
			declaration_int_array.sh \
			declaration_string.sh \
			display1.sh \
			display_bool.sh \
			display_bool_array.sh \
			display_char.sh \
			display_char_array.sh \
			display_index.sh \
			display_int.sh \
			display_int_array.sh \
			display_string.sh \
			empty.sh \
			expression.sh \
			expression_bool.sh \
			expression_bool_array.sh \
			expression_char.sh \
			expression_char_array.sh \
			expression_index.sh \
			expression_int.sh \
			expression_int_array.sh \
			expression_string.sh \
			function1.sh \
			function_bool.sh \
			function_bool_array.sh \
			function_char.sh \
			function_char_array.sh \
			function_empty.sh \
			function_index.sh \
			function_int.sh \
			function_int_array.sh \
			function_string.sh \
			hello_world.sh \
			init_test.sh \
			insertion_sort.sh \
			kmp.sh \
			operator.sh \
			operator_bool_mid.sh \
			operator_bool_post.sh \
			operator_char_mid.sh \
			operator_char_post.sh \
			operator_char_unary.sh \
			operator_index_mid.sh \
			operator_index_post.sh \
			operator_index_unary.sh \
			operator_int_mid.sh \
			operator_int_post.sh \
			operator_int_unary.sh \
			operator_string_mid.sh \
			quick_sort.sh \
			statement.sh \
			statement_empty.sh \
			statement_for.sh \
			statement_if.sh \
			statement_while.sh \
			subarray_int.sh \

XFAIL_TESTS = \
			statement_scope.sh \
