AM_TESTS_ENVIRONMENT = . $(srcdir)/init_test.sh;
AM_TESTS_FD_REDIRECT = 9>&2

TESTS = \
			func_malformat.sh \
			func_malparam.sh \
			func_malscope.sh \
			func_malvalue.sh \
			func_missvalue.sh \
			func_undefine.sh \
			func_numparam.sh \
			break.sh \
			dup_break.sh \
			display_unmatch.sh \
			array_nosize.sh \
			array_malvalue.sh

XFAIL_TESTS = \
			func_malformat.sh \
			func_malparam.sh \
			func_malscope.sh \
			func_malvalue.sh \
			func_missvalue.sh \
			func_undefine.sh \
			func_numparam.sh \
			break.sh \
			dup_break.sh \
			display_unmatch.sh \
			array_nosize.sh \
			array_malvalue.sh


